# canonicaljson-rs

./: Cargo.toml  README.md
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  spec.yml  test.yml
demo/: Cargo.toml
demo/src/: main.rs
src/: ser.rs
testsuite/: Cargo.toml  search-config-v2.canonical.json  search-config-v2.json
testsuite/src/: main.rs
