[package]
name = "canonical_json"
version = "0.5.0"
authors = ["Vishwa Patel <vpatel@mozilla.com>"]
edition = "2018"
license = "MIT"
description = "A Canonical JSON serializer"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "float_roundtrip"] }
regex = "1"
hex = "0.4"
thiserror = "2"
