[package]
name = "canonical_json"
version = "0.6.0"
authors = ["Vishwa Patel <vpatel@mozilla.com>"]
edition = "2018"
license = "MIT"
description = "A Canonical JSON serializer"
repository = "https://github.com/mozilla-services/canonicaljson-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
hex = "0.4"
thiserror = "2"
