[package]
name = "demo"
version = "0.1.0"
authors = ["Mathieu Leplatre <mathieu@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canonical_json = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
