[package]
name = "testsuite"
version = "0.1.0"
authors = ["Mathieu Leplatre <mathieu@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canonical_json = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "float_roundtrip"] }
